Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@
 - task: InstallSSHKey@0
   inputs:
     knownHostsEntry: 'default'
-    sshKeySecureFile: 'pubkey'
+    sshKeySecureFile: 'private'
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
