--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,5 @@
 # Starter pipeline
-- task: InstallSSHKey@0
-  inputs:
-    knownHostsEntry: 'default'
-    sshKeySecureFile: 'private'
+
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
@@ -12,6 +9,15 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
+
+steps:
+
+- task: InstallSSHKey@0
+  inputs:
+    knownHostsEntry: 'default'
+    
+    sshPublicKey: pubkey 
+    sshKeySecureFile: private
 
 steps:
 - script: echo Hello, world!
